--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#D800A6</color>
-    <color name="colorPrimary">#D800A6</color>
     <color name="purple">#400D51</color>
-    <color name="colorPrimaryDark">#400D51</color>
     <color name="peach">#FF7777</color>
-    <color name="colorAccent">#FF7777</color>
     <color name="turquoise">#31E1F7</color>
+           <!-- LIGHT THEME -->
+    <color name="colorPrimary">#D800A6</color>
+    <color name="colorPrimaryDark">#400D51</color>
+    <color name="colorAccent">#FF7777</color>
+            <!-- DARK THEME -->
+    <color name="colorPrimaryDarkTheme">#BB86FC</color>
+    <color name="colorPrimaryVariant">#3700B3</color>
+    <color name="colorSecondary">#31E1F7</color>
 </resources>
