--- a/app/src/main/res/layout/fragment_add_garment.xml
+++ b/app/src/main/res/layout/fragment_add_garment.xml
@@ -27,7 +27,7 @@
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:alpha="0.8"
-        android:background="@color/purple"
+        android:background="@drawable/roundedcorner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -42,14 +42,15 @@
             android:background="@color/purple"
             android:src="@drawable/baseline_photo_camera_24"
             android:scaleType="fitCenter"
-            app:tint="@color/pink"/>
+            app:tint="@color/pink"
+            android:contentDescription="@string/add_your_garment"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:gravity="bottom"
-            android:text="Upload your image here"
+            android:text="@string/upload_your_image_here"
             android:textColor="@color/white"
             android:textSize="16sp" />
     </FrameLayout>
