--- a/app/src/main/res/layout/fragment_add_garment.xml
+++ b/app/src/main/res/layout/fragment_add_garment.xml
@@ -19,10 +19,10 @@
         android:textSize="29sp"
         app:layout_constraintBottom_toTopOf="@+id/addyourgarment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.195" />
+        app:layout_constraintVertical_bias="0.27" />
 
     <TextView
         android:id="@+id/textView2"
@@ -49,7 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintVertical_bias="0.163" />
 
     <FrameLayout
         android:id="@+id/framelayout"
@@ -62,7 +62,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addyourgarment"
-        app:layout_constraintVertical_bias="0.057">
+        app:layout_constraintVertical_bias="0.046">
 
         <ImageButton
             android:layout_width="60dp"
@@ -94,7 +94,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/framelayout"
-        app:layout_constraintVertical_bias="0.076">
+        app:layout_constraintVertical_bias="0.051">
 
         <TextView
             android:id="@+id/category"
@@ -155,7 +155,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutwarmth"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.046">
 
         <TextView
             android:layout_width="0dp"
@@ -166,31 +166,42 @@
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
-        <CheckBox
+        <RadioGroup
+            android:id="@+id/layoutcomfortradio"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/yes" />
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            tools:ignore="RtlSymmetry">
 
-        <CheckBox
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/no" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:text="@string/yes" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no" />
+        </RadioGroup>
+
 
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layoutloose"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="407dp"
+        android:layout_height="38dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutcomfort"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.025">
 
         <TextView
             android:layout_width="0dp"
@@ -201,17 +212,27 @@
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
-        <CheckBox
+        <RadioGroup
+            android:id="@+id/layoutlooseradio"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/yes" />
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            tools:ignore="RtlSymmetry">
 
-        <CheckBox
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/no" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:text="@string/yes" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no" />
+        </RadioGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -224,7 +245,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutloose"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.03">
 
         <TextView
             android:layout_width="0dp"
@@ -235,17 +256,27 @@
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
-        <CheckBox
+        <RadioGroup
+            android:id="@+id/layoutfancyradio"
             android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/yes" />
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:gravity="start"
+            android:orientation="horizontal"
+            android:paddingStart="20dp"
+            tools:ignore="RtlSymmetry">
 
-        <CheckBox
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="3"
-            android:text="@string/no" />
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="40dp"
+                android:text="@string/yes" />
+
+            <RadioButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no" />
+        </RadioGroup>
 
     </LinearLayout>
 
@@ -278,12 +309,12 @@
             android:layout_marginEnd="94dp"
             android:layout_weight="2"
             android:gravity="center"
-            android:spinnerMode="dialog"
-            android:hint="@string/color_of_your_item"/>
+            android:hint="@string/color_of_your_item"
+            android:spinnerMode="dialog" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/addgarment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -293,10 +324,10 @@
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutcolor"
-        app:layout_constraintVertical_bias="0.62" />
+        app:layout_constraintVertical_bias="0.682" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
