--- a/app/src/main/res/layout/fragment_add_garment.xml
+++ b/app/src/main/res/layout/fragment_add_garment.xml
@@ -9,47 +9,19 @@
     android:orientation="vertical"
     tools:context=".AddGarment">
 
-
-    <TextView
-        android:id="@+id/welcometosmartwardrob"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_to_smart_wardrobe"
-        android:textColor="@color/pink"
-        android:textSize="29sp"
-        app:layout_constraintBottom_toTopOf="@+id/addyourgarment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.27" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/the_app_that_chooses_your_outfit_for_you"
-        android:textColor="@color/pink"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/addyourgarment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcometosmartwardrob"
-        app:layout_constraintVertical_bias="0.159" />
-
     <TextView
         android:id="@+id/addyourgarment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_your_garment"
-        android:textColor="@color/purple"
-        android:textSize="28sp"
+        android:textColor="@color/pink"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintVertical_bias="0.022" />
 
     <FrameLayout
         android:id="@+id/framelayout"
@@ -62,7 +34,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addyourgarment"
-        app:layout_constraintVertical_bias="0.046">
+        app:layout_constraintVertical_bias="0.057">
 
         <ImageButton
             android:layout_width="60dp"
@@ -88,21 +60,22 @@
         android:id="@+id/layoutcategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/framelayout"
-        app:layout_constraintVertical_bias="0.051">
+        app:layout_constraintVertical_bias="0.022">
 
         <TextView
             android:id="@+id/category"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="2"
             android:text="@string/category"
-            android:textAlignment="textEnd"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -120,6 +93,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -132,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/warmth"
-            android:textAlignment="textEnd"
+            android:layout_gravity="center"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -149,20 +123,21 @@
         android:id="@+id/layoutcomfort"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutwarmth"
-        app:layout_constraintVertical_bias="0.046">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="2"
             android:text="@string/comfort"
-            android:textAlignment="textEnd"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -178,13 +153,14 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginEnd="40dp"
                 android:text="@string/yes" />
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginEnd="40dp"
                 android:text="@string/no" />
         </RadioGroup>
 
@@ -196,6 +172,7 @@
         android:layout_width="407dp"
         android:layout_height="38dp"
         android:orientation="horizontal"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -208,7 +185,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:text="@string/loose"
-            android:textAlignment="textEnd"
+            android:layout_gravity="center"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -224,13 +201,14 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginEnd="40dp"
                 android:text="@string/yes" />
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginEnd="40dp"
                 android:text="@string/no" />
         </RadioGroup>
     </LinearLayout>
@@ -239,20 +217,21 @@
         android:id="@+id/layoutfancy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutloose"
-        app:layout_constraintVertical_bias="0.03">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="2"
             android:text="@string/fancy"
-            android:textAlignment="textEnd"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -268,13 +247,14 @@
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_marginEnd="40dp"
                 android:text="@string/yes" />
 
             <RadioButton
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginEnd="40dp"
                 android:text="@string/no" />
         </RadioGroup>
 
@@ -284,10 +264,11 @@
         android:id="@+id/layoutcolor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/layoutfancy"
         app:layout_constraintVertical_bias="0.0">
@@ -296,9 +277,9 @@
             android:id="@+id/color"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
             android:text="@string/color"
-            android:textAlignment="textEnd"
             android:textColor="@color/purple"
             android:textSize="18sp" />
 
@@ -314,12 +295,13 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/addgarment"
+        android:id="@+id/buttonaddgarment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/button"
         android:padding="20dp"
+        android:alpha="0.8"
         android:text="@string/add_this_garment"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
